--- a/package.json
+++ b/package.json
@@ -14,16 +14,22 @@
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
     "axios": "^1.3.4",
+    "bufferutil": "^4.0.7",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
+    "jest": "^29.4.3",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sass": "^1.58.0",
-    "typescript": "4.9.5"
+    "socket.io-client": "^4.6.1",
+    "typescript": "4.9.5",
+    "ws": "^8.12.1"
   },
   "devDependencies": {
     "@testing-library/react": "^13.4.0",
-    "prettier": "^2.8.4"
+    "@types/jest": "^29.4.0",
+    "prettier": "^2.8.4",
+    "utf-8-validate": "^6.0.3"
   }
 }
